...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.mapView.delegate = self
        
        self.title = "Map"
        
        let entriesWithCoords = trip.entries.filter { (current) -> Bool in
            if (current.coords) != nil {
                return true
            }
            
...
