...
                        <action selector="addEntryTapped:" destination="-1" eventType="touchUpInside" id="pER-U2-N4Q"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qjA-NZ-ydi">
                    <rect key="frame" x="226" y="271" width="148" height="40"/>
                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
                    <state key="normal" title="my adventures">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <connections>
                        <action selector="viewTripsTapped:" destination="-1" eventType="touchUpInside" id="eR3-af-SVu"/>
                    </connections>
                </button>
...
