...
                
            }
            
            else if indexPath.row == 2 {
                // button for the map view
                
                cell.textLabel?.text = "View Map 🗺"
                cell.textLabel?.font = UIFont.boldSystemFontOfSize(UIFont.systemFontSize())
                cell.accessoryType = .DisclosureIndicator
                cell.textLabel?.textAlignment = .Center
            }
            
            else if indexPath.row == 3 {
...
